export const snapshot = {};

snapshot[`createValueMixin - toHaveStatusStrictEqual 1`] = `
"Expected data to strictly equal {
  x: 1,
  y: undefined,
}, but got {
  x: 1,
}"
`;

snapshot[`createValueMixin - toHaveStatus 1`] = `"Expected status to be 404, but got 200"`;

snapshot[`createValueMixin - toHaveStatusSatisfying 1`] = `"Expected status to satisfy the matcher, but it failed: Must be 404"`;

snapshot[`createValueMixin - toHaveStatusEqual 1`] = `
"Expected data to equal {
  x: 2,
}, but got {
  x: 1,
}"
`;
